Create craft buttons layout.

--- a/runtime/src/app/mainwindow.ui
+++ b/runtime/src/app/mainwindow.ui
@@ -13,14 +13,31 @@
   <property name="windowTitle">
    <string>Runtime</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QGroupBox" name="di_gb">
+      <property name="title">
+       <string>Digital Inputs</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="do_gb">
+      <property name="title">
+       <string>Digital Outputs</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
